# philbell.uk

./: .dockerignore  .gitignore  Pipfile  README.md  app_uwsgi.ini  certbot_django_id_rsa_philbelluk  db.env  db.sqlite3  docker-compose.yml  manage.py  nohup.out  package-lock.json  package.json  pyproject.toml  requirements.txt  run.py  scripts.py  server.sh  urls.py  webpack.config.js
api/: models.py  serializer.py  urls.py  view.py
api/migrations/: 0001_initial.py
app/: admin.py  models.py  settings.py  urls.py  views.py  wsgi.py
app/migrations/: 0001_initial.py
app/settings/: local.py  mac.py  settings.py  win.py
app/static-src/js/: index.js
app/static/css/app/: main.css
app/staticfiles/js/: main.bundle.js
app/templates/: add.html  base.html  home.html  login.html  manage.html  plex.html  resume.html
docker/: Dockerfile
settings/: linux.py  mac.py  settings.py  win.py
src/client/: package-lock.json  package.json
src/client/src/: index.js
src/client/src/components/: Admin.js  App.js  Contact.js  Container.js  Home.js  Input.js  Login.js  Page.js  Resume.js  Sidebar.js
src/db/: init-mongo.js
src/server/: app.js  package.json  server.js
src/server/routes/: db.js  register.js  users.js
static/: main.bundle.js
static-src/js/: index.js
static-src/js/components/: phil-nav-bar.js  side-bar.js
static-src/js/components/buttons/: row-toggle-button.js
static-src/js/components/forms/: login-form.js  plex-form.js
static-src/js/components/inputs/: login-input.js  search-input.js  toggle-input.js
static-src/js/components/navigation/: side-bar.js
static-src/js/components/progress/: loading-state.js  progress-bar.js
static-src/js/components/tables/: add-row.js  base-row.js  base-table.js  manage-table-row.js  manage-table.js  progress-row.js  progress-table.js  result-table.js  results-table-row.js  results-table.js
static-src/js/components/toast/: toast-card.js
static-src/js/util/: fetch.js
static/css/app/: home.css  main.css
static/js/: main.bundle.js
staticfiles/css/app/: home.css  main.css
staticfiles/img/: favicon.ico.old
staticfiles/js/: main.bundle.js
urls/: urls.py
(+22 files in other folders)
