[tool.poetry]
name = "app"
version = "1.0.0"
description = ""
authors = ["Philip Bell"]

[tool.poetry.dependencies]
python = "^3.9.0"
django = "*"
psycopg2-binary = "*"
typer = "*"
djangorestframework = "*"
markdown = "*"
django-filter = "*"
imdbpy = "*"
django-fake-database-backends = "*"
qbittorrent-api = "*"
black = "==20.8b1"
beautifulsoup4 = "^4.9.3"


[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"


[tool.poetry.scripts]
start = "scripts:start"
migrate = "scripts:migrate"
format = "scripts:format"
start_prod = "scripts:start_prod"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

