[tool.poetry]
name = "app"
version = "1.0.0"
description = ""
authors = ["Philip Bell"]

[tool.poetry.dependencies]
python = "^3.10.1"
django = "<4"
typer = "*"
djangorestframework = "*"
django-filter = "*"
imdbpy = "*"
qbittorrent-api = "*"
the-python-bay = "^1.1.9"
certbot-django = "^0.2.0"
asymmetric-jwt-auth = "^0.5.0"
uWSGI = "^2.0.20"
psycopg2 = "^2.9.3"


[tool.poetry.dev-dependencies]


[tool.poetry.scripts]
start = "scripts:start"
migrate = "scripts:migrate"
format = "scripts:format"
start_prod = "scripts:start_prod"
deploy_prod = "scripts:deploy_prod"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

